--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,38 @@ section{
   background-color: rgb(245, 245, 245);
 }
 
+input, textarea{
+  width: 100%;
+  background-color: #242424;
+  color: white;
+  outline: none;
+  border: 1px solid #c0c4cc;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  height: 40px;
+  transition: all 300ms ease;
+}
+
+textarea{
+  resize: vertical;
+  height: 100px;
+  margin-top: 8px;
+}
+
+label{
+  font-size: 14px;
+  font-weight: bold;
+}
+
+input:hover, textarea:hover{
+  border-color: #dcdfe6;
+}
+
+.input:focus, textarea:focus{
+  border-color: #f06449;
+}
+
 .container{
   padding: 50px 0;
   width: 100%;
@@ -117,6 +149,7 @@ section{
 
 .click{
   transition: all 300ms ease;
+  cursor: pointer;
 }
 
 .click:hover{
@@ -324,13 +357,15 @@ Modal
 .model__half{
   width: 50%;
   padding: 40px 72px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
 }
 
 .model__about{
   background-color: rgb(245, 245, 245);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+ 
 }
 
 .model__languages{
@@ -379,6 +414,7 @@ Modal
 
 .model__sub-title{
   margin: 12px 0 24px 0;
+  font-size: 14px;
 }
 
 .model__para{
@@ -387,8 +423,79 @@ Modal
 }
 
 
+.form__item{
+  margin-bottom: 20px;
+}
 
+.form__submit{
+  background-color: #f06449;
+  border: 2px solid #f06449;
+  color: white;
+  font-weight: 700;
+  width: 100%;
+  max-width: 240px;
+  padding: 12px 24px;
+  font-size: 20px;
+  transition: all 300ms ease;
+}
 
+.form__submit:hover{
+  border-color: white;
+  background-color: transparent;
+}
+
+.form__submit:active{
+  border-color: #f06449;
+  background-color: #f06449;
+}
+
+.model__overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
+
+.model__overlay--loading{
+  background-color: #242424;
+  font-size: 80px;
+  z-index: -1;
+}
+
+.model__overlay--success{
+  background-color: #4bb543;
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+  padding: 28px;
+}
+
+.fa--spinner{
+  animation: spinner 750ms infinite linear;
+}
+
+@keyframes spinner{
+  0% {
+    transform: rotate(0);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
+
+.model__exit{
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  color: #fff;
+  font-size: 36px;
+  z-index: 100;
+}
 
 /* 
 
