--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
 html,
 body {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 /*
@@ -101,6 +102,7 @@ button{
 
 section{
   background-color: rgb(245, 245, 245);
+  transition: all 300ms ease;
 }
 
 input, textarea{
@@ -134,6 +136,13 @@ input:hover, textarea:hover{
 .input:focus, textarea:focus{
   border-color: #f06449;
 }
+
+.model--open .model{
+  visibility: visible;
+  box-shadow: 0 20px 80px 0 rgb(0,0, 0.55);
+  z-index: 60;
+}
+
 
 .container{
   padding: 50px 0;
@@ -199,6 +208,58 @@ input:hover, textarea:hover{
   width: 100%;
 }
 
+nav,
+.scroll,
+.header{
+  opacity: 1;
+  visibility: visible;
+  transition: all 600ms 800ms;
+}
+
+.model--open nav,
+.model--open .scroll,
+.model--open .header{
+  opacity: 0;
+  visibility: hidden;
+  transition: all 300ms;
+}
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para
+{
+  color: white;
+}
+
+.dark-theme section {
+  background-color: #242424;
+}
+
+.dark-theme #personal-log {
+  filter: none;
+}
+
+.dark-theme .scroll__icon{
+ border-color: white;
+}
+
+.dark-theme .scroll__icon::after{
+  background-color: white;
+}
+
+.dark-theme .mail__btn{
+  background-color: white;
+  color: black;
+}
+
+.dark-theme .link__hover-effect--black::after{
+  background-color: white;
+}
+
+
 /* 
 
 Landing Page
@@ -251,9 +312,11 @@ Landing Page
   border: none;
   background-color: #242424;
   color: white;
-  position: absolute;
+  position: fixed;
   bottom: 32px;
   right: 40px;
+  z-index: 100;
+  box-shadow: 0 12px 30px 0 rgb(0, 0, 0.2);
 }
 
 .scroll{
@@ -347,11 +410,18 @@ Modal
   width: 90%;
   max-width: 1100px;
   height: 700px;
-  box-shadow: 0 20px 80px 0 rgb(0,0, 0.55);
   border-radius: 20px;
   overflow: hidden;
   display: flex;
+  visibility: hidden;
+  z-index: -1;
+  transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
+}
 
+.model--open .model{
+  visibility: visible;
+  box-shadow: 0 20px 80px 0 rgb(0,0, 0.55);
+  z-index: 60;
 }
 
 .model__half{
@@ -361,11 +431,17 @@ Modal
   flex-direction: column;
   justify-content: center;
   position: relative;
+  transition: all 300ms ease-in;
+}
+
+.model--open .model__about,
+.model--open .model__contact{
+  transform: translateX(0%);
 }
 
 .model__about{
   background-color: rgb(245, 245, 245);
- 
+  transform: translateX(-110%);
 }
 
 .model__languages{
@@ -406,6 +482,7 @@ Modal
 .model__contact{
   background-color: #242424;
   color: white;
+  transform: translateX(110%);
 }
 
 .model__title{
@@ -455,7 +532,7 @@ Modal
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: -1;
@@ -473,6 +550,11 @@ Modal
   font-weight: 700;
   text-align: center;
   padding: 28px;
+}
+
+.model__overlay--visible{
+  z-index: 1;
+  display: flex;
 }
 
 .fa--spinner{
@@ -586,6 +668,7 @@ footer
 */
 
 footer{
+  position: relative;
   background-color: #242424;
   display: flex;
   padding: 6% 0;
@@ -615,10 +698,128 @@ footer{
   color: white;
 }
 
+/*
+
+Shapes
+
+*/
+
+.shape{
+  position: fixed;
+
+}
+
+.shape--0{
+ top: 15vh;
+  left: 5vw;
+}
+
+.shape--1{
+ top: 15vh;
+  left: 50vw;
+}
+
+.shape--2{
+ top: 15vh;
+  left: 80vw;
+}
+
+.shape--3{
+ top: 50vh;
+  left: 5vw;
+}
+
+.shape--4{
+ top: 50vh;
+  left: 50vw;
+}
+
+.shape--5{
+ top: 50vh;
+  left: 80vw;
+}
+
+.shape--6{
+ top: 80vh;
+  left: 5vw;
+}
+
+.shape--7{
+ top: 80vh;
+  left: 50vw;
+}
+
+.shape--8{
+ top: 80vh;
+  left: 80vw;
+}
 
 
+/*
 
+Small Phones, Tablets, Large Smart Phones
 
+*/
+@media (max-width: 768px) {
+  .title{
+    font-size: 80px;
+  }
+  
+  .header__para{
+    font-size: 20px;
+  }
 
+  .model{
+    top: 0;
+    left: 0;
+    transform: none;
+    height: auto;
+    width: 100%;
+    flex-direction: column-reverse;
+    border-radius: 0;
+  }
+
+  .model__half{
+    width: 100%;
+   
+  }
+}
+
+/* 
+
+Small Phones
+
+*/
+
+@media (max-width: 480px) {
+  
+  .title{
+    font-size: 52px;
+  }
+
+  .header__para{
+   font-size: 18px; 
+  }
+
+  .nav__link:first-child{
+    display: none;
+  }
+  .project__description--para{
+    display: none;
+  }
+  .project__description{
+    left: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+  .project__description--sub-title{
+    margin-bottom: 8px;
+  }
+
+  .model__half{
+    padding: 40px;
+  }
+}
 
 
