--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
 }
 
 /*
@@ -79,6 +79,7 @@ h6 {
 
 a {
   text-decoration: none;
+  color: white;
 }
 
 li{
@@ -89,6 +90,7 @@ p{
   line-height: 1.5;
   font-size: 16px;
 }
+
 
 button{
   cursor: pointer;
