--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,12 @@ p{
   font-size: 16px;
 }
 
+b{
+  font-weight: 100;
+  background-image: linear-gradient(60deg, #ff003c, #ffd4d4);
+  -webkit-background-clip: text;
+  color: transparent;
+}
 
 button{
   cursor: pointer;
